# Reversi

./: .gitignore  CMakeLists.txt  Makefile  README.md  changes  client.conf  connector.c  connector.h  fileIOHandler.c  fileIOHandler.h  global.h  main.c  main.h  makefile  performConnection.c  performConnection.h  test.conf  thinker.c  thinker.h
ProjektPlanung_Gantt/: .goutputstream-MF047X  Awesenheit.txt  Projekt_Planung.gan  Shared memory
ProjektPlanung_Gantt/Alt/muehle-master/: Makefile  client.conf  config.c  config.h  connector.c  connector.h  constants.h  main.c  muehle.pro  performConnection.c  performConnection.h  thinker.c  thinker.h
lib/: appParamHandler.c  appParamHandler.h  connector.c  connector.h  errorHandler.c  errorHandler.h  fileIOHandler.c  fileIOHandler.h  global.h  performConnection.c  performConnection.h  prologue.c  prologue.h  serverHandler.h  spielfeld.c  spielfeld.h  thinker.c  thinker.h
